--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,6 +12,20 @@ body, html {
   background-size: cover;
   text-align: center;
   margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.hp-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img {
+    width: 30%;
+    opacity: 0.8;
+  }
 }
 
 .bg h2 {
@@ -20,25 +34,26 @@ body, html {
   font-size: 55px;
   opacity: 0.9;
   text-shadow: 1px 2px 4px white;
-  position: relative;
-  top: 250px;
+  padding-bottom: 50px;
 }
 
 .index-link {
   opacity: 0.8;
   color: white;
   border: 1px solid white;
-  border-radius: 2px;
+  border-radius: 5px;
   padding: 10px;
   margin: 11px;
   width: 200px;
-  position: relative;
-  top: 270px;
   text-align: center;
   a {
   color: inherit;
   text-decoration: none;
   }
+}
+
+.index-link:hover{
+  opacity: 1;
 }
 
 .service-info h3 {
